k8s_Lab/Lab01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app
  name: sample-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: app
        image: ibmcom/websphere-liberty:full-java11-openj9-ubi
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1001
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccountName: sample-app
      terminationGracePeriodSeconds: 30
