k8s_Lab/Lab01/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-app 
  name: sample-app
spec:
  type: ClusterIP
  selector:
    app: sample-app
  ports:
  - name: http-9080
    AppProtocol: http
    port: 9080
    targetPort: 9080
    protocol: TCP
