k8s_Lab/Lab01/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
spec:
  host: sample.<利用しているOCPのドメインを指定>
  path: /
  tls:
    termination: edge
  to:
    kind: Service
    name: sample-app
